--- a/MVC/public/.htaccess
+++ b/MVC/public/.htaccess
@@ -1,6 +1,9 @@
 <IfModule mod_rewrite.c>
-  Options -Multiviews RewriteEngine On #TENER EN CUENTA LA RUTA FULL PARA EL
-  CORE RewriteBase /CursoPHP/MVC/public RewriteCond %{REQUEST_FILNAME} ! -d
-  RewriteCond %{REQUEST_FILNAME} ! -f RewriteRule ^(.+)$ index.php?url=$1
-  [QSA,L]
+  Options -Multiviews 
+  RewriteEngine On 
+  #TENER EN CUENTA LA RUTA FULL PARA EL CORE 
+  RewriteBase /MVC/public 
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteCond %{REQUEST_FILENAME} !-f 
+  RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
 </IfModule>
