realizacion crud editorial

--- a/biblioteca/app/.htaccess
+++ b/biblioteca/app/.htaccess
@@ -1,1 +1,4 @@
 Options -Indexes
+
+# Header Set Access-Control-Allow-Origin "http://www.agrovirtual.org"
+# sirve para solucionar problemas del cors site origin
